[tool.poetry]
name = "adjustment"
version = "0.1.0"
description = ""
authors = ["Daniel Soutar <danielsoutar144@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
pydantic = "^2.10.2"
uvicorn = "^0.32.1"
colorlog = "^6.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.13.0"
httpx = "^0.28.0"
types-requests = "^2.32.0.20241016"
ruff = "^0.8.1"

[tool.ruff]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
plugins = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
