[project]
authors = [
    {name = "Daniel Soutar", email = "danielsoutar144@gmail.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "fastapi<1.0.0,>=0.115.5",
    "pydantic<3.0.0,>=2.10.2",
    "uvicorn<1.0.0,>=0.32.1",
    "colorlog<7.0.0,>=6.9.0",
    "requests<3.0.0,>=2.32.3",
    "pytest-xdist<4.0.0,>=3.6.1",
]
name = "daggery"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.13.0",
    "httpx<1.0.0,>=0.28.0",
    "types-requests<3.0.0.0,>=2.32.0.20241016",
    "ruff<1.0.0,>=0.8.1",
    "pytest-asyncio<1.0.0,>=0.25.3",
    "pytest<9.0.0,>=8.3.4",
    "mkdocs-material<10.0.0,>=9.6.3",
    "pytest-cov<7.0.0,>=6.0.0",
]

[tool.ruff]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
plugins = []
check_untyped_defs = true

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
